dev v0.0.4 - 'themes perfect'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button class="key"><div class="key-text">7</div></button>
         <button class="key"><div class="key-text">8</div></button>
         <button class="key"><div class="key-text">9</div></button>
-        <button class="key key-blue"><div class="key-text">DEL</div></button>
+        <button class="key key-control"><div class="key-text">DEL</div></button>
         <button class="key"><div class="key-text">4</div></button>
         <button class="key"><div class="key-text">5</div></button>
         <button class="key"><div class="key-text">6</div></button>
@@ -63,8 +63,8 @@
         <button class="key"><div class="key-text">0</div></button>
         <button class="key"><div class="key-text">/</div></button>
         <button class="key"><div class="key-text">x</div></button>
-        <button class="key key-long key-blue"><div class="key-text">RESET</div></button>
-        <button class="key key-long key-red"><div class="key-text">=</div></button>
+        <button class="key key-long key-control"><div class="key-text">RESET</div></button>
+        <button class="key key-long key-equals"><div class="key-text">=</div></button>
       </div>
     </div>
 
